@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" standalone="no" ?>
-<cuts:node xmlns="http://cuts.cs.iupui.edu"
-           xmlns:cuts="http://cuts.cs.iupui.edu"
+<cuts:node xmlns="http://www.cs.iupui.edu/CUTS/schemas"
+           xmlns:cuts="http://www.cs.iupui.edu/CUTS/schemas"
            xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-           xsi:schemaLocation="http://cuts.cs.iupui.edu cutsnode.xsd">
+           xsi:schemaLocation="http://www.cs.iupui.edu/CUTS/schemas cutsnode.xsd">
 
   <environment id="default" inherit="true" active="true">
     <!-- environment variables for this environment -->
